--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
         "axios": "^1.1.2",
         "laravel-vite-plugin": "^0.8.0",
         "postcss": "^8.4.30",
+        "tailwind-clip-path": "^1.0.0",
         "tailwindcss": "^3.3.3",
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "tw-elements": "^1.0.0"
+        "autosize": "^6.0.1",
+        "clsx": "^2.0.0",
+        "tw-elements": "^1.0.0",
+        "validator": "^13.11.0"
     }
 }
